# situation_awareness

./: Dockerfile  README.md  metrics_FPR_TPR.py  metrics_TIME.py  requirements.txt  scen_to_server.py  scenario_gen.py
TIME_log/: logger_timer_agg_close_middle_5_grid_85_3_class.txt  logger_timer_agg_main.txt  logger_timer_fil_close_middle_5_grid_85_3_class.txt  logger_timer_fil_main.txt
TP_NP_log/: logger_agg_close_middle_5_grid_85_2_class.txt  logger_agg_close_middle_5_grid_85_3_class.txt  logger_agg_main.txt  logger_fil_close_middle_5_grid_85_2_class.txt  logger_fil_close_middle_5_grid_85_3_class.txt  logger_fil_main.txt
diplom_ws/src/server/: package.xml  setup.py
diplom_ws/src/server/launch/: server.launch.py
diplom_ws/src/server/scenario/: server_data.json
diplom_ws/src/server/server/: server.py
diplom_ws/src/sit_awar/: CMakeLists.txt  package.xml
diplom_ws/src/sit_awar/agent_config/: agent_config.json
diplom_ws/src/sit_awar/include/sit_awar/: DataAggregation.h  DataFilter.h  DataHungarianAggregation.h  DataKalmanFilter.h  Hungarian.h  IdGenerator.h  Kalman.h  Object.h  SitAwarMsgsTypedef.h  SituationAwareness.h  TopicListener.h  WorldModel.h  consts.h
diplom_ws/src/sit_awar/src/: DataHungarianAggregation.cpp  DataKalmanFilter.cpp  IdGenerator.cpp  Kalman.cpp  SituationAwareness.cpp  TopicListener.cpp  WorldModel.cpp  main.cpp
diplom_ws/src/sit_awar_msgs/: CMakeLists.txt  package.xml
diplom_ws/src/sit_awar_msgs/msg/: ObjectState.msg  SelfObjectState.msg  SensorData.msg  SensorPack.msg
